--- a/src/css/toastui-editor-viewer.css
+++ b/src/css/toastui-editor-viewer.css
@@ -8,9 +8,9 @@
 .tui-editor-contents {
   margin: 0;
   padding: 0;
-  font-size: 13px;
-  font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', '나눔바른고딕',
-    'Nanum Barun Gothic', '맑은고딕', 'Malgun Gothic', sans-serif;
+  font-size: 15px;
+  /* font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', '나눔바른고딕', 'Nanum Barun Gothic', '맑은고딕', 'Malgun Gothic', sans-serif; */
+  font-family: "Helvetica Neue", Verdana, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
 }
 
 .tui-editor-contents *:not(table) {
